--- a/index.html
+++ b/index.html
@@ -24,40 +24,46 @@
         const questions = {
             "Strategie & F&uuml;hrung": [
                 "1.	Gibt es eine klar definierte digitale Strategie?",
-				"2.	Wird die digitale Transformation aktiv von der Geschäftsführung unterstützt?",
-				"3.	Sind klare digitale Ziele und KPIs definiert?",
-				"4.	Wird regelmäßig evaluiert, ob die digitale Strategie erfolgreich ist?",
-				"5.	Gibt es eine Budgetierung speziell für digitale Initiativen?"
+		"2.	Wird die digitale Transformation aktiv von der Geschäftsf&uuml;hrung unterst&uuml;tzt?",
+		"3.	Sind klare digitale Ziele und KPIs definiert?",
+		"4.	Wie stark ist K&uuml;nstliche Intelligenz in Ihre Gesch&auml;ftsstrategie integriert, und wie verändert sie Ihre Prozesse?",
+		"5.	Wie aktiv steuert Ihr Unternehmen die Abh&auml;ngigkeiten in digitalen &Ouml;kosystemen und Partnerschaften?"
             ],
-            "Datenmanagement": [
-                "In welchem Umfang betreibt Ihr Unternehmen ein strukturiertes, unternehmensweites Datenmanagement?",
-				"Wie systematisch und in Echtzeit sind Ihre Datenquellen dokumentiert, integriert und &uuml;berwacht?",
-				"Wie strukturiert und automatisiert erfolgt die Kategorisierung von Daten in Ihrem Unternehmen?",
-				"Wie klar definiert und im Unternehmen verankert ist Ihre Datenstrategie &ndash; und welche Verantwortlichkeiten sind daf&uuml;r festgelegt?",
-				"Wie stark sind Ihre Datenvisualisierungen auf die Bed&uuml;rfnisse der Nutzer zugeschnitten und technologisch fortgeschritten?",
-				"Wie nutzen Sie Datenanalyse zur proaktiven Entscheidungsfindung im Unternehmen?",
-				"Wie skalierbar, integriert und flexibel ist ihre Datenarchitektur, um Ihre Unternehmensstrategie optimal zu unterst&uuml;tzen?",
-				"Wie gut ist der unternehmensweite Zugriff auf relevante Daten geregelt &ndash; sind Informationen f&uuml;r alle berechtigten Mitarbeitenden in Echtzeit verf&uuml;gbar?",
-				"Welche F&auml;higkeiten haben Ihre Mitarbeitenden im Umgang mit Datenanalyse, Automatisierung und Tools?"
+            "Daten & Analytik": [
+                "6.	Wie klar definiert und im Unternehmen verankert ist Ihre Datenstrategie &ndash; und welche Verantwortlichkeiten sind daf&uuml;r festgelegt?",
+		"7.	Wie nutzen Sie Datenanalyse zur proaktiven Entscheidungsfindung im Unternehmen?",
+		"8.	Gibt es ein zentrales Datenmanagement&ndash;System?",
+		"9.	Wie gut ist der unternehmensweite Zugriff auf relevante Daten geregelt 	&ndash; sind Informationen für alle berechtigten Mitarbeitenden in Echtzeit verf&uuml;gbar?",
+		"10.	Werden fortgeschrittene Analysemethoden (z. B. Predictive Analytics) genutzt?",
             ],
-            "Technologie": [
-                "Wie stark sind moderne Technologien in Ihre Gesch&auml;ftsprozesse integriert und wie werden diese zur Prozessoptimierung genutzt?",
-				"Wie systematisch identifiziert, bewertet und integriert Ihr Unternehmen neue Technologien zur F&ouml;rderung von Innovation und Wettbewerbsf&auml;higkeit?",
-				"Wie zentral ist Business Intelligence f&uuml;r Ihre strategischen Entscheidungen, und wie integriert ist Ihr BI-System?",
-				"Inwieweit sind Business-Apps in die Gesch&auml;ftsprozesse Ihres Unternehmens integriert und tragen sie messbar zur Effizienz, Flexibilit&auml;t und Innovation bei?",
-				"In welchem Umfang nutzt Ihr Unternehmen digitale Werkzeuge zur Prozessautomatisierung und &ndash;optimierung in allen Gesch&auml;ftsbereichen?",
-				"In welchem Ausma&szlig; nutzt Ihr Unternehmen Plattformtechnologien zur Integration von Systemen und Daten?",
-				"Wie stark ist K&uuml;nstliche Intelligenz in Ihre Gesch&auml;ftsstrategie integriert, und wie ver&auml;ndert sie Ihre Prozesse?",
-				"Wie gut sind Ihre Mitarbeitenden &uuml;ber neue Technologien informiert und in der Lage, diese effektiv zu nutzen?"
+            "Technologie & Infrastruktur": [
+                "11.	Wie stark sind moderne Technologien in Ihre Gesch&auml;ftsprozesse integriert und wie werden diese zur Prozessoptimierung genutzt?",
+		"12.	Sind IT-Systeme cloudbasiert und flexibel skalierbar?",
+		"13.	Gibt es eine API-Strategie zur einfachen Integration neuer Systeme?",
+		"14.	Wie systematisch identifiziert, bewertet und integriert Ihr Unternehmen neue Technologien zur F&ouml;rderung von Innovation und Wettbewerbsf&auml;higkeit?",
+		"15.	Wie zentral ist Business Intelligence f&uuml;r Ihre strategischen Entscheidungen, und wie integriert ist Ihr BI-System?",
             ],
-			"Digitale Kommunikation und Kollaboration": [
-				"Wie digital, integriert und effizient sind die Kommunikations- und Kollaborationsprozesse in Ihrem Unternehmen gestaltet?",
-				"Wie effektiv und technologiegest&uuml;tzt sind Ihre digitalen Besprechungen organisiert?",
-				"Wie interaktiv und kollaborativ wird das Intranet in Ihrem Unternehmen genutzt?",
-				"Welche Rolle spielen Enterprise Social Networks (ESN) f&uuml;r die interne und externe Kommunikation?",
-				"In welchem Umfang nutzt Ihr Unternehmen Chatbots und KI zur Unterst&uuml;tzung oder Automatisierung von Kommunikations- und Gesch&auml;ftsprozessen?",
-				"Wie kompetent und anpassungsf&auml;hig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools zur Kommunikation und Zusammenarbeit?"
-			],
+            "Prozesse & Automatisierung": [
+		"16.	Sind zentrale Gesch&auml;ftsprozesse digitalisiert?",
+		"17.	Werden Workflows automatisiert, um Effizienz zu steigern?",
+		"18.	Wie stark nutzt Ihr Unternehmen digitale Werkzeuge zur Prozessautomatisierung und &ndash;optimierung in allen Gesch&auml;ftsbereichen?",
+		"19.	Wie systematisch erfolgt die Kategorisierung und Automatisierung von Daten?",
+		"20.	Wird agile Entwicklungsmethodik für digitale Projekte eingesetzt?",
+            ],
+            "Digitale Geschäftsmodelle": [
+                "21.	Wird ein digitales Gesch&auml;ftsmodell verfolgt oder entwickelt?",
+		"22.	Werden digitale Plattformen oder &Ouml;kosysteme genutzt?",
+		"23.	Gibt es wiederkehrende digitale Einnahmequellen (z. B. Abos, Pay-per-Use)?",
+		"24.	Werden datengetriebene Gesch&auml;ftsmodelle genutzt?",
+		"25.	Wie integriert ist K&uuml;nstliche Intelligenz in Ihre Produkte oder Services?",
+            ],
+            "Kultur, Fähigkeiten & Kollaboration": [
+                "26.	Gibt es regelm&auml;ßige Schulungen zur Digitalisierung für Mitarbeitende?",
+		"27.	Wie kompetent und anpassungsfähig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools?",
+		"28.	Wird eine Kultur des digitalen Wandels im Unternehmen gelebt?",
+		"29.	Wie effektiv und technologiegest&uuml;tzt sind Ihre digitalen Besprechungen organisiert?",
+		"30.	Werden agile Arbeitsmethoden in der gesamten Organisation eingesetzt?",
+            ],
         };
 
         function generateForm() {
