--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         .result { margin-top: 20px; font-weight: bold; }
     </style>
 </head>
+<div id="result"></div>
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
     (function() {
