--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         .result { margin-top: 20px; font-weight: bold; }
     </style>
 </head>
-<div id="result"></div>
+console.log(resultData); // <- ZEIGT dir im Browser die Daten
+
+emailjs.send("DEIN_SERVICE_ID", "DEIN_TEMPLATE_ID", resultData)	
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
     (function() {
