--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		"27.	Wie kompetent und anpassungsfähig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools?",
 		"28.	Wird eine Kultur des digitalen Wandels im Unternehmen gelebt?",
 		"29.	Wie effektiv und technologiegest&uuml;tzt sind Ihre digitalen Besprechungen organisiert?",
-		"30.	Werden agile Arbeitsmethoden in der gesamten Organisation eingesetzt?",
+		"30.	Wie konsequent werden Prinzipien von New Work im Unternehmen umgesetzt?",
             ],
         };
 
