--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
    <script>
         const questions = {
             "Strategie & F&uuml;hrung": [
-                "1.	Gibt es eine klar definierte digitale Strategie?",
-		"2.	Wird die digitale Transformation aktiv von der Geschäftsf&uuml;hrung unterst&uuml;tzt?",
+        "1.	Gibt es eine klar definierte digitale Strategie?",
+		"2.	Wird die digitale Transformation aktiv von der Gesch&auml;ftsf&uuml;hrung unterst&uuml;tzt?",
 		"3.	Sind klare digitale Ziele und KPIs definiert?",
-		"4.	Wie stark ist K&uuml;nstliche Intelligenz in Ihre Gesch&auml;ftsstrategie integriert, und wie verändert sie Ihre Prozesse?",
+		"4.	Wie stark ist K&uuml;nstliche Intelligenz in Ihre Gesch&auml;ftsstrategie integriert, und wie ver&auml;ndert sie Ihre Prozesse?",
 		"5.	Wie aktiv steuert Ihr Unternehmen die Abh&auml;ngigkeiten in digitalen &Ouml;kosystemen und Partnerschaften?"
             ],
             "Daten & Analytik": [
-                "6.	Wie klar definiert und im Unternehmen verankert ist Ihre Datenstrategie &ndash; und welche Verantwortlichkeiten sind daf&uuml;r festgelegt?",
+        "6.	Wie klar definiert und im Unternehmen verankert ist Ihre Datenstrategie &ndash; und welche Verantwortlichkeiten sind daf&uuml;r festgelegt?",
 		"7.	Wie nutzen Sie Datenanalyse zur proaktiven Entscheidungsfindung im Unternehmen?",
 		"8.	Gibt es ein zentrales Datenmanagement&ndash;System?",
-		"9.	Wie gut ist der unternehmensweite Zugriff auf relevante Daten geregelt 	&ndash; sind Informationen für alle berechtigten Mitarbeitenden in Echtzeit verf&uuml;gbar?",
-		"10.	Werden fortgeschrittene Analysemethoden (z. B. Predictive Analytics) genutzt?",
+		"9.	Wie gut ist der unternehmensweite Zugriff auf relevante Daten geregelt 	&ndash; sind Informationen f&uuml;r alle berechtigten Mitarbeitenden in Echtzeit verf&uuml;gbar?",
+		"10.	Werden fortgeschrittene Analysemethoden (z.B. Predictive Analytics) genutzt?",
             ],
             "Technologie & Infrastruktur": [
-                "11.	Wie stark sind moderne Technologien in Ihre Gesch&auml;ftsprozesse integriert und wie werden diese zur Prozessoptimierung genutzt?",
+        "11.	Wie stark sind moderne Technologien in Ihre Gesch&auml;ftsprozesse integriert und wie werden diese zur Prozessoptimierung genutzt?",
 		"12.	Sind IT-Systeme cloudbasiert und flexibel skalierbar?",
 		"13.	Gibt es eine API-Strategie zur einfachen Integration neuer Systeme?",
 		"14.	Wie systematisch identifiziert, bewertet und integriert Ihr Unternehmen neue Technologien zur F&ouml;rderung von Innovation und Wettbewerbsf&auml;higkeit?",
@@ -85,18 +85,18 @@
 		"17.	Werden Workflows automatisiert, um Effizienz zu steigern?",
 		"18.	Wie stark nutzt Ihr Unternehmen digitale Werkzeuge zur Prozessautomatisierung und &ndash;optimierung in allen Gesch&auml;ftsbereichen?",
 		"19.	Wie systematisch erfolgt die Kategorisierung und Automatisierung von Daten?",
-		"20.	Wird agile Entwicklungsmethodik für digitale Projekte eingesetzt?",
+		"20.	Wird agile Entwicklungsmethodik f&uuml;r digitale Projekte eingesetzt?",
             ],
-            "Digitale Geschäftsmodelle": [
-                "21.	Wird ein digitales Gesch&auml;ftsmodell verfolgt oder entwickelt?",
+            "Digitale Gesch&auml;ftsmodelle": [
+        "21.	Wird ein digitales Gesch&auml;ftsmodell verfolgt oder entwickelt?",
 		"22.	Werden digitale Plattformen oder &Ouml;kosysteme genutzt?",
-		"23.	Gibt es wiederkehrende digitale Einnahmequellen (z. B. Abos, Pay-per-Use)?",
+		"23.	Gibt es wiederkehrende digitale Einnahmequellen (z.B. Abos, Pay-per-Use)?",
 		"24.	Werden datengetriebene Gesch&auml;ftsmodelle genutzt?",
 		"25.	Wie integriert ist K&uuml;nstliche Intelligenz in Ihre Produkte oder Services?",
             ],
-            "Kultur, Fähigkeiten & Kollaboration": [
-                "26.	Gibt es regelm&auml;ßige Schulungen zur Digitalisierung für Mitarbeitende?",
-		"27.	Wie kompetent und anpassungsfähig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools?",
+            "Kultur, F&auml;higkeiten & Kollaboration": [
+        "26.	Gibt es regelm&auml;&szlig;ige Schulungen zur Digitalisierung f&uuml;r Mitarbeitende?",
+		"27.	Wie kompetent und anpassungsf&auml;hig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools?",
 		"28.	Wird eine Kultur des digitalen Wandels im Unternehmen gelebt?",
 		"29.	Wie effektiv und technologiegest&uuml;tzt sind Ihre digitalen Besprechungen organisiert?",
 		"30.	Wie konsequent werden Prinzipien von New Work im Unternehmen umgesetzt?",
