--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         "26.	Gibt es regelm&auml;&szlig;ige Schulungen zur Digitalisierung f&uuml;r Mitarbeitende?",
 		"27.	Wie kompetent und anpassungsf&auml;hig sind Ihre Mitarbeitenden im Umgang mit digitalen Tools?",
 		"28.	Wird eine Kultur des digitalen Wandels im Unternehmen gelebt?",
-		"29.	Werden Besprechnungen digital gehalten und werden diese effektiv durc digitale Tools unterst&uuml;tzt?",
+		"29.	Werden Besprechnungen digital gehalten und werden diese effektiv durch digitale Tools unterst&uuml;tzt?",
 		"30.	Wie konsequent werden Prinzipien von New Work im Unternehmen umgesetzt?",
             ],
         };
